# python-whmcs

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  Makefile  README.rst  devel-requirements.txt  pytest.ini  requirements.txt  setup.cfg  setup.py
pywhmcs/: __init__.py  base.py  billing.py  client.py  clients.py  exceptions.py  general.py  invoices.py  orders.py  products.py  promotions.py  tickets.py
tests/: conftest.py  settings.cfg  test_clients.py  test_core.py  test_general.py  test_invoices.py  test_orders.py  test_products.py  test_promotions.py  test_tickets.py
