[metadata]
name = python-whmcs
description = Client library for WHMCS API
license = closed-source
author = Zane Mingee
author_email = zane.mingee@beyondhosting.net
url = https://beyondhosting.net
classifiers =
    License :: closed-source

[options]
zip_safe = True
packages = pywhmcs
install_requires =
    phpserialize
    requests

[options.extras_require]
devel =
    autodoc
    coverage
    phonenumberslite
    pudb
    pylint
    pytest
    pytest-cov
    pytest-faker
    releases
    sphinx
    sphinx-rtd-theme
    wheel
